brought Server class back